feat: add to backend more connect with keycloak and add security endpoints